--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -394,7 +394,7 @@
   </div>
 
   <footer class="app-footer">
-    <span><a href="http://coreui.io">Copyright</a> © 2018 | Python Developed by Guilherme Luis.</span>
+    <span><a href="http://coreui.io">Copyright</a> DS</span>
     <!--<span class="ml-auto">Powered by <a href="http://coreui.io">CoreUI</a></span>-->
   </footer>
 
