--- a/core/templates/core/dashboard.html
+++ b/core/templates/core/dashboard.html
@@ -1,5 +1,5 @@
 {% extends 'core/base.html' %}
-{% load staticfiles %}
+{% load static %}
 
 {% block content %}
 
@@ -19,7 +19,7 @@
               <a class="dropdown-item" href="#">Something else here</a>
             </div>
           </div>
-          <h4 class="mb-0">{{ companies.count }}</h4>
+          <h4 class="mb-0">{{ companies_count }}</h4>
           <p>Registered Companies</p>
         </div>
         <div class="chart-wrapper px-3" style="height:70px;"><div class="chartjs-size-monitor" style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; pointer-events: none; visibility: hidden; z-index: -1;"><div class="chartjs-size-monitor-expand" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;"><div style="position:absolute;width:1000000px;height:1000000px;left:0;top:0"></div></div><div class="chartjs-size-monitor-shrink" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;"><div style="position:absolute;width:200%;height:200%;left:0; top:0"></div></div></div>
